@@ -932,8 +932,7 @@ Supervisor Events (New in 3.0)
     The serialized body of a PROCESS_STATE_CHANGE event (and all
     subtypes) is in the form::
 
-      process_name: <name>
-      group_name: <name>
+      process_name:<name> group_name:<name> pid:<process_pid>
 
     Subtypes of PROCESS_STATE_CHANGE:
 
@@ -1004,8 +1003,7 @@ Supervisor Events (New in 3.0)
     The serialized body of a PROCESS_COMMUNICATION event (and all
     subtypes) is::
 
-      process_name: <name>
-      group_name: <name>
+      process_name:<name> group_name:<name>
       <data>
 
     Subtypes of PROCESS_COMMUNICATION:
@@ -1041,8 +1039,7 @@ Supervisor Events (New in 3.0)
     The serialization of an EVENT_BUFFER_OVERFLOW body
     is::
 
-      group_name: <name>
-      event_type: <type of discarded event>
+      group_name:<name> event_type:<type of discarded event>
 
 Event Listeners (New in 3.0)
 
@@ -1175,8 +1172,7 @@ Event Listener Notification Protocol
   specific event data serialization definitions.  An example payload
   for a PROCESS_COMMUNICATION_STDOUT event notification is::
 
-    process_name: foo
-    group_name: bar
+    process_name:foo group_name:bar pid:123
     This is the data that was sent between the tags
 
   Once it has processed the header, the event listener implementation
